# timer

./: .gitignore  pyproject.toml
backend/src/: app.py  dependencies.py  enums.py  models.py  queries.py  utils.py
backend/src/queries/projects/: create_project.edgeql  delete_project.edgeql  get_all_project_time_entries.edgeql  get_all_projects.edgeql  get_project.edgeql  update_project.edgeql
backend/src/queries/time_entries/: add_end_datetime_to_time_entry.edgeql  add_time_entry.edgeql  delete_time_entry.edgeql  get_all_time_entries.edgeql  get_time_entry.edgeql  update_time_entry.edgeql
backend/src/routers/: entries.py  projects.py
dbschema/: default.esdl
frontend/: next.config.js  package-lock.json  package.json
frontend/components/: Groups.js  GroupsNav.js  ServersNav.js
frontend/components/icons/: AppinsIcon.js
frontend/config/: theme.js
frontend/helpers/: localStorage.js
frontend/pages/: _app.js  _document.js  index.js
frontend/services/: authService.js
